# cameraSterioCalibration

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_registration.cpp
3DModel/: htcViveTrack.yaml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/roboy_cognition_msgs/: DescribeSceneResponse.h  DriveToLocationRequest.h  FindObjectRequest.h  FindObjectResponse.h  LookAtSpeakerResponse.h
devel/include/roboy_control_msgs/: ListItemsRequest.h  PerformActionsRequest.h
devel/include/roboy_middleware_msgs/: ControlModeRequest.h  ForwardKinematicsRequest.h  InverseKinematicsMultipleFramesRequest.h  InverseKinematicsMultipleFramesResponse.h  InverseKinematicsRequest.h  InverseKinematicsResponse.h  SystemCheckRequest.h  SystemCheckResponse.h  XL320Request.h
devel/include/roboy_simulation_msgs/: GymStepRequest.h
devel/lib/camerasterio/: camerasterio
devel/lib/common_utilities/: ROS_MASTER_URI_broadcaster  ROS_MASTER_URI_receiver  rfid_unlocker
devel/lib/darkroom/: testMe
devel/lib/darkroom_rqt/: test_this
devel/lib/pkgconfig/: camerasterio.pc  common_utilities.pc  darkroom.pc  darkroom_rqt.pc  roboy_cognition_msgs.pc  roboy_control_msgs.pc  roboy_middleware_msgs.pc  roboy_simulation_msgs.pc
devel/lib/python2.7/dist-packages/darkroom_rqt/: __init__.py
devel/lib/python2.7/dist-packages/roboy_cognition_msgs/msg/: _AudioData.py  _AudioInfo.py  _AudioLocation.py  _DirectionVector.py  _FaceCoordinates.py  _Faces.py  _FacialFeatures.py  _IceCream.py  _OrderIceCreamAction.py  _OrderIceCreamActionFeedback.py  _OrderIceCreamActionGoal.py  _OrderIceCreamActionResult.py  _OrderIceCreamFeedback.py  _OrderIceCreamGoal.py  _OrderIceCreamResult.py  _RecognizedFaces.py  _RecognizedSpeech.py  _SpeechSynthesis.py
devel/lib/python2.7/dist-packages/roboy_cognition_msgs/srv/: _ApplyFilter.py  _AssertProperty.py  _CallQuery.py  _CheckProperty.py  _CheckQuery.py  _CreateInstance.py  _DataQuery.py  _DescribeScene.py  _DetectFace.py  _DetectIceCream.py  _DetectIntent.py  _DriveToLocation.py  _EvalSeq2Seq.py  _FindInstances.py  _FindObject.py  _GenerateAnswer.py  _GetObject.py  _LocalizeObject.py  _LookAtSpeaker.py  _Payment.py  _PlaySound.py  _QualityOfTone.py  _QualityOfTones.py  _RecognizeFaces.py  _RecognizeObject.py  _RecognizeSpeech.py  _SaveObject.py  _ShowInstances.py  _ShowProperty.py  _ShowPropertyValue.py  _Talk.py  _TalkToFile.py  _TrainSeq2Seq.py  _WhichTones.py
devel/lib/python2.7/dist-packages/roboy_control_msgs/msg/: _Behavior.py  _ControlLeds.py  _DangerNotification.py  _DebugNotification.py  _Emotion.py  _ErrorNotification.py  _InfoNotification.py  _LookAtAction.py  _LookAtActionFeedback.py  _LookAtActionGoal.py  _LookAtActionResult.py  _LookAtFeedback.py  _LookAtGoal.py  _LookAtResult.py  _MoveEndEffectorAction.py  _Strings.py  (+22 more)
devel/share/camerasterio/cmake/: camerasterioConfig.cmake
devel/share/common_utilities/cmake/: common_utilitiesConfig.cmake
devel/share/darkroom/cmake/: darkroomConfig.cmake
devel/share/darkroom_rqt/cmake/: darkroom_rqtConfig.cmake
devel/share/roboy_cognition_msgs/cmake/: roboy_cognition_msgs-msg-extras.cmake  roboy_cognition_msgs-msg-paths.cmake  roboy_cognition_msgsConfig.cmake
devel/share/roboy_control_msgs/cmake/: roboy_control_msgs-msg-extras.cmake  roboy_control_msgs-msg-paths.cmake  roboy_control_msgsConfig.cmake
devel/share/roboy_middleware_msgs/cmake/: roboy_middleware_msgs-msg-extras.cmake  roboy_middleware_msgs-msg-paths.cmake  roboy_middleware_msgsConfig.cmake
devel/share/roboy_simulation_msgs/cmake/: roboy_simulation_msgs-msg-extras.cmake  roboy_simulation_msgs-msg-paths.cmake  roboy_simulation_msgsConfig.cmake
devel/share/roseus/ros/roboy_cognition_msgs/: manifest.l
devel/share/roseus/ros/roboy_control_msgs/: manifest.l
devel/share/roseus/ros/roboy_middleware_msgs/: manifest.l
devel/share/roseus/ros/roboy_simulation_msgs/: manifest.l
dump/: debug_data_dump.txt
include/filter/: filter.cpp  filter.hpp  filter.hpp.gch
include/load3dModel/: 3dModel.cpp  3dModel.h
include/mathUtils/: CMakeLists.txt
include/usbDriver/: interface_htcDongle.cpp  interface_htcDongle.h  interface_htcDongle.h.gch  parser_htcDongle.cpp  rayFinder.cpp  rayFinder.h  rayFinder.h.gch
include/utils/: DataMatcher.cpp  DataMatcher.hpp  DataMatcher.hpp.gch  Utils.cpp  Utils.hpp  Utils.hpp.gch
load3dModel/: 3dModel.cpp  3dModel.h
src/: CsvReader.h  CsvWriter.h  Model.cpp  Model.h  Utils.cpp  Utils.h  Utils_openCV.cpp  Utils_openCV.h  testData.cpp  testData.h  testData.h.gch  testData.hpp.gch
src/cameraCalibration/: CMakeLists.txt  main.cpp  package.xml
src/cameraCalibration/Data/: cookies_ORB.yml
src/cameraCalibration/Data/robots/exohaptic/lighthouseSensors/: left_link6.yaml
src/cameraCalibration/dump/: debug_data_dump_.txt
src/cameraCalibration/include/filter/: filter.hpp  filter.hpp.gch
src/cameraCalibration/include/load3dModel/: 3dModel.h  3dModel.h.gch
src/cameraCalibration/include/mathUtils/: mathUtils.cpp  mathUtils.hpp
src/cameraCalibration/include/rosInterface/: triang.cpp  triang.hpp
src/cameraCalibration/include/usbDriver/: datatype_htcDongle.h  datatype_htcDongle.h.gch  driver_htcDongle.cpp  driver_htcDongle.h  interface_htcDongle.cpp  interface_htcDongle.h  interface_htcDongle.h.gch  parser_htcDongle.cpp  parser_htcDongle.h  parser_htcDongle.h.gch  rayFinder.cpp
src/cameraCalibration/include/utils/: DataMatcher.cpp  DataMatcher.hpp  Utils.cpp  Utils.hpp  Utils.hpp.gch  testData.cpp
src/cameraCalibration/src/: CsvReader.cpp  CsvReader.hpp  CsvWriter.cpp  CsvWriter.hpp  Mesh.cpp  ModelRegistration.cpp  PnPProblem.cpp  PnPProblem.hpp  RobustMatcher.cpp  Utils_openCV.cpp  Utils_openCV.hpp
src/roboy_communication/roboy_middleware_msgs/: CMakeLists.txt
src/roboy_communication/roboy_middleware_msgs/msg/: DarkRoomSensorV2.msg
src/roboy_communication/roboy_middleware_msgs/srv/: InverseKinematicsMultipleFrames.srv
src/roboy_darkroom/darkroom/src/: TrackedObject.cpp  Triangulation.cpp
usbDriver/: interface_htcDongle.cpp  interface_htcDongle.h  parser_htcDongle.h
(+104 files in other folders)
